# CMakeList.txt : CMake project for reorder_args, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (reorderargs "reorder_args.cpp" "reorder_args.h")

# TODO: Add tests and install targets if needed.
